--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,47 @@
 @charset 'utf-8';
 @import url('./reset.css');
 @import './fonts.css';
+@import './section.css';
+
 
 h1{
   color: blue;
+  font-size: 2rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  text-align: center;
+  text-transform: capitalize;
+  padding: 5px;
 }
+@media print{
+  h1{
+    color: red;
+    font-family: sans-serif;
+    font-weight: 200;
+  }
+}
+@media (max-width:576px){
+  h1{
+    border: 2px solid blue;
+  }
+  }
+  @media (min-width:576px){
+    h1{
+      border: 2px dotted blue;
+    
+    }
+  }
+@media (min-width:768px){
+  h1{
+    border: 2px solid red;
+    }
+}
+
+/* $grid-breakpoints: (
+  xs: 0, <576px [320, 576) -small smartphones
+  sm: >=576px, [576, 768) -smartphones 
+  md: >=768px, [768, 992) -tablets 
+  lg: >=992px, [992, 1200) desktop laptop, 
+  xl: >=1200px, [1200, 1400) desktop
+  xxl: >=400px [1400, ] - desktop large
+); */
