--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,102 @@
-@charset 'utf-8';
-@import url('./reset.css');
-@import './fonts.css';
-@import './section.css';
-
-
-h1{
-  color: blue;
+:root{
+  --black-color: #222;
+  --text-color: #757474;
+  
+  --attention-color:#deda4f;
+  --font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+.usersList{
+ min-height: 200vh;
+}
+.userCard{
+  display: flex;
+  position: relative;
+  min-height: 40vh;
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  flex: nowrap;
+  border: 2px solid grey ;
+  border-radius: 4%;
+  font-family: var(--font-family);
+  box-shadow: 0px 2px 10px var(--text-color);
+  
+}
+.userCard:after{
+  content: "+";
+  display: inline-block;
+  position: absolute;
+  top: calc(50% - 25px);
+  right: -4%;
+  width: 45px;
+  height: 45px;  
+  line-height: 45px;
   font-size: 2rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
+  font-weight: 200;
   text-align: center;
-  text-transform: capitalize;
-  padding: 5px;
+  border-radius: 50%;
+  background-color: var(--attention-color);
+  
 }
-@media print{
-  h1{
-    color: red;
-    font-family: sans-serif;
-    font-weight: 200;
-  }
+.imageWrapper{
+  width: 40%;
+  
 }
-@media (max-width:576px){
-  h1{
-    border: 2px solid blue;
-  }
-  }
-  @media (min-width:576px){
-    h1{
-      border: 2px dotted blue;
+.photo{
+  width: 100%;
+  height: 100%;
+  object-fit:cover
+  border-radius: inherit;
+}
+.userInfo{
+margin: auto ;
+margin-left: 10%;
+color: var(--text-color)
+/* text-align: center; */
+}
+.personalInfo{
+ margin-bottom: 20%;
+}
+.userName{
+  font-size: 1.8rem;
+  color: var(--black-color);
+}
+.statusContainer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.status{
+  display: flex;
+  margin-top: auto;
+  flex-direction: column;
+  justify-content: space-between;
+}
+a{
+  text-decoration: none ;
+  color: inherit;
+}
+span{}
+
+@media (max-width: 550px){
+  .userCard{
     
-    }
+    flex-direction: column;
   }
-@media (min-width:768px){
-  h1{
-    border: 2px solid red;
-    }
+  .userCard:after{
+    display: none;
+  }
+  .imageWrapper{
+    width: 100%;
+  }
+  .userInfo{
+    margin: 0;
+    padding: 1em;
+  }
 }
+
+
 
 /* $grid-breakpoints: (
   xs: 0, <576px [320, 576) -small smartphones
