--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,103 +1,16 @@
-:root{
-  --black-color: #222;
-  --text-color: #757474;
-  
-  --attention-color:#deda4f;
-  --font-family: Arial, sans-serif;
-  font-size: 16px;
-}
-.usersList{
- min-height: 200vh;
-}
-.userCard{
-  display: flex;
-  position: relative;
-  min-height: 40vh;
-  width: 90%;
-  max-width: 600px;
-  margin: 0 auto;
-  flex: nowrap;
-  border: 2px solid grey ;
-  border-radius: 4%;
-  font-family: var(--font-family);
-  box-shadow: 0px 2px 10px var(--text-color);
-  
-}
-.userCard:after{
-  content: "+";
-  display: inline-block;
-  position: absolute;
-  top: calc(50% - 25px);
-  right: -4%;
-  width: 45px;
-  height: 45px;  
-  line-height: 45px;
-  font-size: 2rem;
-  font-weight: 200;
-  text-align: center;
-  border-radius: 50%;
-  background-color: var(--attention-color);
-  
-}
-.imageWrapper{
-  width: 40%;
-  
-}
-.photo{
+@import './reset.css';
+
+.image{
   width: 100%;
-  height: 100%;
-  object-fit:cover
-  border-radius: inherit;
+  height: 250px;
+  object-fit: cover;
+  object-position: center;
 }
-.userInfo{
-margin: auto ;
-margin-left: 10%;
-color: var(--text-color)
-/* text-align: center; */
+@media (max-width:800px){
+  .image{
+  object-position: top;
 }
-.personalInfo{
- margin-bottom: 20%;
 }
-.userName{
-  font-size: 1.8rem;
-  color: var(--black-color);
-}
-.statusContainer{
-  display: flex;
-  justify-content: space-between;
-}
-
-.status{
-  display: flex;
-  margin-top: auto;
-  flex-direction: column;
-  justify-content: space-between;
-}
-a{
-  text-decoration: none ;
-  color: inherit;
-}
-span{}
-
-@media (max-width: 550px){
-  .userCard{
-    
-    flex-direction: column;
-  }
-  .userCard:after{
-    display: none;
-  }
-  .imageWrapper{
-    width: 100%;
-  }
-  .userInfo{
-    margin: 0;
-    padding: 1em;
-  }
-}
-
-
-
 /* $grid-breakpoints: (
   xs: 0, <576px [320, 576) -small smartphones
   sm: >=576px, [576, 768) -smartphones 
