--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,7 @@
-@import './reset.css';
+*{
+  box-sizing: border-box;
+}
 
-.image{
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-  object-position: center;
-}
-@media (max-width:800px){
-  .image{
-  object-position: top;
-}
-}
 /* $grid-breakpoints: (
   xs: 0, <576px [320, 576) -small smartphones
   sm: >=576px, [576, 768) -smartphones 
