--- a/assets/css/custom-grid.css
+++ b/assets/css/custom-grid.css
@@ -218,62 +218,62 @@
   .container{  
     width: 960px;    
   }
-  .col-xl-1{
+  .col-lg-1{
     --size: calc(100% / var(--count-column) * 1);
     flex-basis: var(--size);
     max-width: var(--size);
    }
-   .col-xl-2{
+   .col-lg-2{
      --size: calc(100% / var(--count-column) * 2);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-3{
+   .col-lg-3{
      --size: calc(100% / var(--count-column) * 3);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-4{
+   .col-lg-4{
      --size: calc(100% / var(--count-column) * 4);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-5{
+   .col-lg-5{
      --size: calc(100% / var(--count-column) * 5);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-6{
+   .col-lg-6{
      --size: calc(100% / var(--count-column) * 6);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-7{
+   .col-lg-7{
      --size: calc(100% / var(--count-column) * 7);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-8{
+   .col-lg-8{
      --size: calc(100% / var(--count-column) * 8);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-9{
+   .col-lg-9{
      --size: calc(100% / var(--count-column) * 9);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-10{
+   .col-lg-10{
      --size: calc(100% / var(--count-column) * 10);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-11{
+   .col-lg-11{
      --size: calc(100% / var(--count-column) * 11);
      flex-basis: var(--size);
      max-width: var(--size);
    }
-   .col-xl-12{
+   .col-lg-12{
      --size: calc(100% / var(--count-column) * 12);
      flex-basis: var(--size);
      max-width: var(--size);
