--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,44 @@
 :root{
   --black-color: #222;
-  --text-color: #757474;
+  --text-color: #acacac;
   --circle-size: 60px;
   --attention-color:#ebd660;
   --font-family: Arial, sans-serif;
   --border-radius: 8px;
   --big-font: 1.8rem;
   font-size: 16px;
+  /* font-weight: 300; */
 }
 body{
   background-color: #ddd;
 }
 .usersList{
  min-height: 100vh;
+ padding-top: 2rem;
  
+}
+.usersList > *:first-child{
+  visibility: hidden;
 }
 .userCard{
   display: flex;
-  position: relative;
-  min-height: 40vh;
-  width: 90%;
-  max-width: 600px;
-  margin: 0 auto;
   flex: nowrap;
+  position: relative;
+  min-height: 30vh;
+  min-width: 500px;
+  width: 90%;
+  max-width: 700px;
+  margin: 0 auto;
+  
+  
   border: 1px solid #ddd ;
   border-radius: calc(var(--border-radius) + 2px);
   font-family: var(--font-family);
   background-color: white;
   box-shadow: 0px 1px 10px var(--text-color);
-
   
 }
+
 .userCard:after{
   content: "+";
   width: var(--circle-size);
@@ -38,8 +46,8 @@ body{
   display: inline-block;
   position: absolute;
   top: calc(50% - 25px);
-  right: -5%;
-
+  right: calc(var(--circle-size) / (-2));
+  opacity: 85%;
   border-radius: 50%;
   line-height: var(--circle-size);
   font-size: var(--big-font);
@@ -47,29 +55,44 @@ body{
   text-align: center;  
   background-color: var(--attention-color);    
 }
+.userCard::before{
+  content: "pro";
+  display: inline-block;
+  width: 3rem;
+  height: 1.3rem; 
+  position: absolute;
+  top: 10%;
+  right: 5%;  
+
+  border-radius: 1rem;
+  line-height: 1.3rem;
+  font-size: 0.8rem;
+  font-weight: 200;
+  text-transform: uppercase;
+  text-align: center;  
+  color: #fefefe;
+  background-color: var(--text-color);    
+}
 .imageWrapper{
-  width: 40%;
-     
+  width: 40%;     
 }
 .photo{
   width: 100%;
-  height: 100%;
-  
+  height: 100%;  
   object-fit: cover;
+  object-position: bottom;  
   border-top-left-radius: var(--border-radius);
   border-bottom-left-radius: var(--border-radius);
     
 }
 .userInfo{
   margin: auto ;
-  margin-left: 10%;
   color: var(--text-color)
   
 }
-.personalInfo{
-  
-}
-.personalInfo > *:last-child, .status > *:last-child{
+
+.personalInfo > *:last-child,
+      .status > *:last-child{
   padding-top: var(--border-radius);
 }
 .userName{
@@ -95,14 +118,28 @@ a{
 
 
 @media (max-width: 550px){
-  .userCard{    
+  .usersList{
+    /* min-height: 40vh;
+    height: 70%; */
+    padding-top: 0;
+    
+   }
+  .userCard{   
+    min-width: 250px;
     flex-direction: column;    
   }
   .userCard:after{
     display: none;
   }
+  .userCard::before{    
+    display: none;     
+  }
   .imageWrapper{
     width: 100%;
+  }
+  .photo{
+    border-bottom-left-radius: initial;
+    border-top-right-radius: var(--border-radius);
   }
   .userInfo{
     margin: 0;
